# Project-Genesis-Lumina

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  start.ps1  start.py  test_imports.py
.github/workflows/: ci.yml  release.yml
client_examples/: browser_demo.py  js_client.js  python_client.py
docs/: ARCHITECTURE.md  project_intro.md
lumina-bridge/: __init__.py
lumina-bridge/bus/: __init__.py
lumina-bridge/grpc/: __init__.py
lumina-bridge/include/: ipc_channel.h
lumina-bridge/src/: bridge_server.py  channel.cpp  grpc_server.py
lumina-cpp/: CMakeLists.txt
lumina-cpp/include/: audio_engine.h  bridge_client.h  input_handler.h  lip_sync_handler.h  live2d_model.h  renderer.h
lumina-cpp/src/: audio_engine.cpp  grpc_client.cpp  input_handler.cpp  lip_sync_handler.cpp  live2d_model.cpp  main.cpp  renderer.cpp
lumina-cpp/tests/: CMakeLists.txt  test_audio_engine.cpp  test_bridge_client.cpp  test_grpc_client.cpp  test_input_handler.cpp  test_lip_sync.cpp  test_live2d_model.cpp
lumina-proto/: CMakeLists.txt  build_proto.bat
lumina-proto/src/: lumina.proto
lumina-py/: README.md  config.yaml  pyproject.toml  requirements.txt
lumina-py/src/: __init__.py  api_routes.py  audio_utils.py  chat_handler.py  config_schema.py  crew_manager.py  emotion_system.py  grpc_retry.py  interfaces.py  lip_sync.py  llm_service.py  main.py  metrics.py  mock_providers.py  neko_persona.py  neuro_engine.py  sentiment.py  server.py  stt_engine.py  thread_pool.py  tts_engine.py
lumina-py/tests/: conftest.py  test_audio_pipeline.py  test_chat_handler.py  test_core_pipeline.py  test_emotion_system.py  test_grpc_retry.py  test_integration.py  test_neuro_engine.py  test_sentiment.py
scripts/: bump_version.py  ci-make-proto.sh
upage-bridge/include/: ipc_channel.h
upage-bridge/src/: bridge_server.py  channel.cpp  grpc_server.py
upage-cpp/: CMakeLists.txt
upage-cpp/include/: audio_engine.h  bridge_client.h  input_handler.h  lip_sync_handler.h  live2d_model.h  renderer.h
upage-cpp/src/: audio_engine.cpp  grpc_client.cpp  input_handler.cpp  lip_sync_handler.cpp  live2d_model.cpp  main.cpp  renderer.cpp
upage-proto/: CMakeLists.txt  build_proto.bat
upage-proto/src/: upage.proto
upage-py/: README.md  config.yaml  requirements.txt
upage-py/src/: __init__.py  api_routes.py  audio_utils.py  chat_handler.py  crew_manager.py  emotion_system.py  lip_sync.py  llm_service.py  main.py  neuro_engine.py  server.py  stt_engine.py  tts_engine.py
upage-py/tests/: test_audio_pipeline.py
